<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Instrucciones -->
    <item android:title="@string/menu_instrucciones"
        android:id="@+id/menu_instrucciones"
        android:icon="@drawable/ic_instrucciones"
        android:contentDescription="@string/menu_instrucciones_desc"
        app:showAsAction="never" />

    <!-- Nuevo Juego -->
    <item android:title="@string/menu_nuevo"
        android:id="@+id/menu_nuevo"
        android:icon="@drawable/ic_nuevo_juego"
        android:contentDescription="@string/menu_nuevo_desc"
        app:showAsAction="never" />

    <!-- Configuración -->
    <item android:title="@string/menu_config"
        android:id="@+id/menu_config"
        android:icon="@drawable/ic_config"
        android:contentDescription="@string/menu_config_desc"
        app:showAsAction="never" />

    <!-- Seleccionar Personaje -->
    <item android:title="@string/menu_personaje"
        android:id="@+id/menu_personaje"
        android:icon="@drawable/homer"
        android:contentDescription="@string/menu_personaje_desc"
        app:showAsAction="ifRoom" />

</menu>
